working on smaller screen spacing issue

--- a/src/style/navbarlanding.css
+++ b/src/style/navbarlanding.css
@@ -301,6 +301,16 @@ nav.scroll {
   }
 }
 
+@media(min-width: 1100px) and (max-width:1200px) {
+  .landing-img {
+    margin-left: 50px;
+    }
+  .opt-landing-img {
+    margin-left: 50px;
+  }
+}
+ 
+
 @media(min-width:1100px){
   nav {
     display: flex;
@@ -398,15 +408,14 @@ nav.scroll {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: center;
     min-height: 30vw;
-    margin-top: 180px
+    margin-top: 180px;
   }
   .landing-img {
     width: 30vw;
     height: 25vw;
-    /* margin: 0px 0px 20px 0px */
-  }
+    }
   .opt-landing-img {
     display: initial;
     width: 30vw;
